@@ -685,6 +685,9 @@ efreet_cache_icon_theme_name_list(int *num)
     return keys;
 }
 
+/*
+ * Needs EAPI because of helper binaries
+ */
 EAPI void
 efreet_cache_array_string_free(Efreet_Cache_Array_String *array)
 {
